# pcprep

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cscope.out  pcprep.sh  test.sh
doc/: README.usage.md
examples/cam2mat/: cam-matrix.json  cam-param.json  cam2mat.cpp
examples/merge/: merge.c
examples/pc_io/: pc_io.c
examples/screen_area/: render.h  screen_area.cpp
examples/subsampling/: subsampling.c
examples/tiling/: tiling.c
include/pcprep/: aabb.h  canvas.h  core.h  graphic.h  mesh.h  pointcloud.h  sample.h  vec3f.h  vec3u.h  vec3uc.h  wrapper.h
pcp/: pcp.c  pcp.h
pcprep/: main.c
scripts/: build.sh
src/miniply/: miniply.cpp
src/pcprep/: aabb.c  canvas.c  core.c  graphic.c  mesh.c  pointcloud.c  sample.c  wrapper.cpp
